--- a/src/main/webapp/WEB-INF/views/todo/list.html
+++ b/src/main/webapp/WEB-INF/views/todo/list.html
@@ -19,7 +19,7 @@
         <!-- (1) -->
         <form action="/todo/create" method="post">
             <input type="text">
-            <button>Create Todo</button>
+            <button>Create Todo2</button>
         </form>
     </div>
     <hr />
