--- a/src/main/webapp/WEB-INF/views/todo/list.html
+++ b/src/main/webapp/WEB-INF/views/todo/list.html
@@ -3,14 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Todo List</title>
-<style type="text/css">
-.strike {
-    text-decoration: line-through;
-}
-
-.inline {
-    display: inline-block;
-}
+<link rel = "stylesheet" href="=../../../../../resources/app/css/styles.css"
 </style>
 </head>
 <body>
