テスト変更

--- a/src/main/webapp/WEB-INF/views/todo/list.html
+++ b/src/main/webapp/WEB-INF/views/todo/list.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 <body>
-    <h1>Todo List</h1>
+    <h1>Todo List2</h1>
     <div id="todoForm">
         <!-- (1) -->
         <form action="/todo/create" method="post">
